@@ -34,8 +34,9 @@ files = ['apt_pkgmodule.cc', 'acquire.cc', 'cache.cc', 'cdrom.cc',
          'configuration.cc', 'depcache.cc', 'generic.cc', 'hashes.cc',
          'hashstring.cc', 'indexfile.cc', 'indexrecords.cc', 'metaindex.cc',
          'pkgmanager.cc', 'pkgrecords.cc', 'pkgsrcrecords.cc', 'policy.cc',
-         'progress.cc', 'sourcelist.cc', 'string.cc', 'tag.cc']
-files = ['python/' + fname for fname in files]         
+         'progress.cc', 'sourcelist.cc', 'string.cc', 'tag.cc',
+         'opprogress.cc', 'acquireprogress.cc']
+files = sorted(['python/' + fname for fname in files])
 apt_pkg = Extension("apt_pkg", files, libraries=["apt-pkg"])
 
 # The apt_inst module
